fix: board overflows

--- a/src/App.css
+++ b/src/App.css
@@ -12,25 +12,12 @@ header {
   border: 1px solid orange;
 }
 
-.main {
-  width: 100vw;
+.board {
+  width: 100%;
   display: grid;
-  grid-template-columns: 10rem 20rem 1fr;
+  grid-template-columns: 1fr 1fr 4fr;
   gap: 1rem;
   margin-top: 1rem;
-}
-
-.animal-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(10rem, 1fr));
-  gap: 20px;
-  background-color: #fff;
-  padding: 20px;
-}
-
-.result-column {
-  text-align: center;
-  padding: 10px;
 }
 
 .result {
@@ -54,19 +41,24 @@ header {
   padding: 20px;
   background-color: #e6eef9;
 
-  .animal {
-    width: fit-content;
-  }
+  .animal-card {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
 
-  .selected {
-    border: 3px solid #ff6b00;
-    border-style: outset;
-    transform: scale(1.05);
-  }
-}
+    .animal-image {
+      width: 100%;
+      height: 100%;
+      max-height: 10rem;
+      max-width: 10rem;
+      object-fit: contain;
+    }
 
-.animal-image {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+    .selected {
+      border: 3px solid #ff6b00;
+      transform: scale(1.05);
+    }
+  }
 }
